Fix CreateLotterySummary
